Update index.html and style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,11 @@
 .align-justify{
     text-align: justify;
 }
+
+.post-text{
+    text-indent: 100px;
+}
+.text-text{
+    font-size: 16px;
+    line-height: 2;
+}
