--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,16 @@
     font-size: 16px;
     line-height: 2;
 }
+.post-post-title{
+    letter-spacing: 10px;
+}
+.post-post-text{
+    letter-spacing: 5px;
+}
+.title-title{
+    color:#ffffff;
+    text-shadow: 2px 2px 4px #000000;
+}
+.pre-title{
+    white-space: pre-wrap;
+}
